--- a/main/html/content-areas/CA7 - Digital Environments/subtopic/7.5-Cloud-Environments/7.5-Cloud-Environments.html
+++ b/main/html/content-areas/CA7 - Digital Environments/subtopic/7.5-Cloud-Environments/7.5-Cloud-Environments.html
@@ -28,7 +28,367 @@
     </form>
  
     <main>
-        
+        <h3 class="heading" id="7.5">7.5 - Cloud Environments</h3>
+
+        <p>A <strong>cloud environment</strong> is essentially a network of remote servers accessed over the Internet, where you can store data, run applications, or access services without relying solely on your local computer or network.</p>
+
+        <p>Cloud computing is popular because it offers <strong>flexibility</strong>, <strong>scalability</strong>, and <strong>cost-efficiency</strong>.</p>
+
+        <h3 class="top-sub-heading" id="7.5.1">7.5.1 - Different Types of Cloud</h3>
+
+        <p>There are two main types you need to know: <strong>private cloud</strong> and <strong>public cloud</strong>.</p>
+
+        <h4>1. Private Cloud</h4>
+
+        <p><strong>Definition:</strong> A cloud environment dedicated to a single organization. The servers and resources are used only by that organization.</p>
+
+        <h4>Key Features:</h4>
+        <ul>
+            <li>Exclusive access → more control over data and security</li>
+            <li>Can be hosted on-site (your own data center) or by a third-party provider</li>
+            <li>Usually more expensive because the organization pays for all resources</li>
+        </ul>
+
+        <h4>Pros:</h4>
+        <ul>
+            <li><strong class="pros">Strong security</strong> and privacy</li>
+            <li><strong class="pros">Customizable</strong> to organization’s needs</li>
+            <li><strong class="pros">Better compliance</strong> with regulations</li>
+        </ul>
+
+        <h4>Cons:</h4>
+        <ul>
+            <li><strong class="cons">Higher costs</strong> (hardware, maintenance)</li>
+            <li><strong class="cons">Requires IT expertise</strong> to manage</li>
+        </ul>
+
+        <p><strong>Example:</strong> A bank hosting its online banking platform on a private cloud to ensure customer data is fully secure.</p>
+
+        <h4>2. Public Cloud</h4>
+
+        <p><strong>Definition:</strong> A cloud environment shared among multiple organizations, provided by companies like Amazon Web Services (AWS), Microsoft Azure, or Google Cloud.</p>
+
+        <h4>Key Features:</h4>
+        <ul>
+            <li>Accessible over the Internet</li>
+            <li>Costs are based on usage (<strong>pay-as-you-go</strong>)</li>
+            <li>The cloud provider manages hardware and software</li>
+        </ul>
+
+        <h4>Pros:</h4>
+        <ul>
+            <li><strong class="pros">Low cost</strong> and no maintenance required by the user</li>
+            <li><strong class="pros">Highly scalable</strong> → easy to increase or decrease resources</li>
+            <li><strong class="pros">Quick deployment</strong> of services</li>
+        </ul>
+
+        <h4>Cons:</h4>
+        <ul>
+            <li><strong class="cons">Less control</strong> over security</li>
+            <li><strong class="cons">Shared infrastructure</strong> → potential privacy concerns</li>
+        </ul>
+
+        <p><strong>Example:</strong> A small startup hosting its website and customer database on AWS to save costs and avoid managing hardware.</p>
+
+        <h4>Quick Comparison Table</h4>
+
+        <table class="summary-table">
+            <thead>
+                <tr>
+                    <th>Feature</th>
+                    <th>Private Cloud</th>
+                    <th>Public Cloud</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Access</td>
+                    <td>Single organization only</td>
+                    <td>Multiple organizations</td>
+                </tr>
+                <tr>
+                    <td>Security</td>
+                    <td>High</td>
+                    <td>Moderate to high (depends on provider)</td>
+                </tr>
+                <tr>
+                    <td>Cost</td>
+                    <td>High</td>
+                    <td>Low (pay-as-you-go)</td>
+                </tr>
+                <tr>
+                    <td>Control</td>
+                    <td>Full control</td>
+                    <td>Limited control</td>
+                </tr>
+                <tr>
+                    <td>Example</td>
+                    <td>Bank’s private server</td>
+                    <td>Website hosted on AWS</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <h4>Key Takeaways</h4>
+        <ul>
+            <li><strong>Private cloud</strong> → secure, customizable, but costly</li>
+            <li><strong>Public cloud</strong> → cost-effective, scalable, but less control</li>
+        </ul>
+
+        <p>Cloud environments are the backbone of modern computing. Many organizations now use a <strong>hybrid approach</strong>, combining private and public clouds to get the best of both worlds.</p>
+
+        <h3 class="sub-heading" id="7.5.2">7.5.2 - Benefits of Cloud Computing</h3>
+
+        <p>Cloud computing isn't just a trend—it offers real advantages for individuals and organizations. Here are the main benefits you need to understand:</p>
+
+        <h4>1. Portability</h4>
+        <p><strong>Definition:</strong> You can access your data, applications, and services from anywhere with an internet connection.</p>
+        <p><strong>Why it's useful:</strong> You're not tied to a single device or location.</p>
+        <p><strong>Example:</strong></p>
+        <ul>
+            <li>A student can work on a document from home, school, or a café using Google Drive.</li>
+            <li>A business employee can access company apps on a laptop, tablet, or phone while traveling.</li>
+        </ul>
+
+        <h4>2. Elasticity</h4>
+        <p><strong>Definition:</strong> The cloud can scale resources up or down based on your needs.</p>
+        <p><strong>Why it's useful:</strong> You only use (and pay for) what you need. No wasted resources.</p>
+        <p><strong>Example:</strong> An online store can automatically handle thousands of customers during Black Friday, then scale back when traffic drops.</p>
+
+        <h4>3. Fewer Storage Limitations</h4>
+        <p><strong>Definition:</strong> You are less limited by physical storage because the cloud provides virtually unlimited space.</p>
+        <p><strong>Why it's useful:</strong> You don't have to worry about running out of storage on your own device.</p>
+        <p><strong>Example:</strong> Storing thousands of photos, videos, and files in cloud storage like Dropbox or OneDrive without needing extra hard drives.</p>
+
+        <h4>4. Cost Effectiveness</h4>
+        <p><strong>Definition:</strong> Using the cloud can save money compared to buying and maintaining physical servers and software.</p>
+        <p><strong>Why it's useful:</strong> Pay-as-you-go pricing means you only pay for what you use, no upfront hardware costs.</p>
+        <p><strong>Example:</strong> A startup uses AWS or Azure for hosting instead of buying expensive servers, saving thousands of dollars in setup costs.</p>
+
+        <h4>Quick Summary Table</h4>
+
+        <table class="summary-table">
+            <thead>
+                <tr>
+                    <th>Benefit</th>
+                    <th>Explanation</th>
+                    <th>Example</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Portability</td>
+                    <td>Access anywhere via internet</td>
+                    <td>Google Drive documents on any device</td>
+                </tr>
+                <tr>
+                    <td>Elasticity</td>
+                    <td>Scale resources up or down as needed</td>
+                    <td>Online store handling Black Friday traffic</td>
+                </tr>
+                <tr>
+                    <td>Fewer Storage Limitations</td>
+                    <td>Almost unlimited virtual storage</td>
+                    <td>Storing thousands of photos in Dropbox</td>
+                </tr>
+                <tr>
+                    <td>Cost Effectiveness</td>
+                    <td>Pay for only what you use; no need to buy servers</td>
+                    <td>Startup hosting website on AWS instead of buying hardware</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <h4>Key Takeaway</h4>
+        <p>The cloud allows businesses and individuals to be <strong>flexible</strong>, <strong>efficient</strong>, and <strong>cost-conscious</strong>. It removes physical limitations and lets you focus on what really matters: using your data and applications effectively.</p>
+
+
+        <h3 class="sub-heading" id="7.5.3">7.5.3 - Common Cloud Delivery Models</h3>
+
+        <p>Cloud services are typically delivered in three models: <strong>IaaS</strong>, <strong>PaaS</strong>, and <strong>SaaS</strong>. Each model defines what the client manages vs what the cloud provider manages.</p>
+
+        <h4>1. Infrastructure as a Service (IaaS)</h4>
+
+        <p><strong>What it is:</strong> IaaS provides virtualized computing resources (servers, storage, networks) over the internet. It’s like renting the hardware instead of buying it.</p>
+
+        <h4>Responsibility:</h4>
+        <table class="summary-table">
+            <thead>
+                <tr>
+                    <th>Managed by Client</th>
+                    <th>Managed by Cloud Provider</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Application software</td>
+                    <td>Virtualization</td>
+                </tr>
+                <tr>
+                    <td>System software (OS, middleware)</td>
+                    <td>Physical hardware (servers, storage, network)</td>
+                </tr>
+                <tr>
+                    <td>Runtime</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Data and user accounts</td>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
+
+        <h4>Advantages:</h4>
+        <ul>
+            <li><strong class="pros">High flexibility</strong> and control over the software and OS</li>
+            <li><strong class="pros">Can install and configure software</strong> as needed</li>
+            <li><strong class="pros">Good for businesses</strong> with specific requirements</li>
+        </ul>
+
+        <h4>Disadvantages:</h4>
+        <ul>
+            <li><strong class="cons">Client must maintain OS</strong> and middleware</li>
+            <li><strong class="cons">Higher responsibility</strong> → requires technical expertise</li>
+            <li><strong class="cons">Slightly higher management overhead</strong></li>
+        </ul>
+
+        <p><strong>Example:</strong> Using Amazon EC2 or Microsoft Azure VMs to deploy a custom web application.</p>
+
+        <h4>2. Platform as a Service (PaaS)</h4>
+
+        <p><strong>What it is:</strong> PaaS provides a platform to develop, run, and manage applications without worrying about the underlying hardware or OS.</p>
+
+        <h4>Responsibility:</h4>
+        <table class="summary-table">
+            <thead>
+                <tr>
+                    <th>Managed by Client</th>
+                    <th>Managed by Cloud Provider</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Application software</td>
+                    <td>Virtualization</td>
+                </tr>
+                <tr>
+                    <td>Data and user accounts</td>
+                    <td>Physical hardware (servers, storage, network)</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>System software (OS, middleware)</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Runtime</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <h4>Advantages:</h4>
+        <ul>
+            <li><strong class="pros">Focus on development</strong> and deployment rather than managing infrastructure</li>
+            <li><strong class="pros">Reduces time</strong> and complexity for application setup</li>
+            <li><strong class="pros">Good for rapid development</strong> and testing</li>
+        </ul>
+
+        <h4>Disadvantages:</h4>
+        <ul>
+            <li><strong class="cons">Less control</strong> over the underlying OS or middleware</li>
+            <li><strong class="cons">May be limited</strong> by platform features or configurations</li>
+        </ul>
+
+        <p><strong>Example:</strong> Google App Engine or Heroku, where developers deploy apps without managing servers or OS updates.</p>
+
+        <h4>3. Software as a Service (SaaS)</h4>
+
+        <p><strong>What it is:</strong> SaaS delivers fully functional software over the internet. The client just uses the software via a browser or app.</p>
+
+        <h4>Responsibility:</h4>
+        <table class="summary-table">
+            <thead>
+                <tr>
+                    <th>Managed by Client</th>
+                    <th>Managed by Cloud Provider</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>User accounts</td>
+                    <td>Virtualization</td>
+                </tr>
+                <tr>
+                    <td>Data</td>
+                    <td>Physical hardware (servers, storage, network)</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>System software (OS, middleware)</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Runtime</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Application software</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <h4>Advantages:</h4>
+        <ul>
+            <li><strong class="pros">No infrastructure or platform management</strong> needed</li>
+            <li><strong class="pros">Easy to access</strong> and use from anywhere</li>
+            <li><strong class="pros">Updates and maintenance</strong> handled by the provider</li>
+        </ul>
+
+        <h4>Disadvantages:</h4>
+        <ul>
+            <li><strong class="cons">Minimal control</strong> over software customization</li>
+            <li><strong class="cons">Dependent on provider’s reliability</strong> and security</li>
+            <li><strong class="cons">Potential data privacy concerns</strong></li>
+        </ul>
+
+        <p><strong>Example:</strong> Gmail, Microsoft 365, or Salesforce.</p>
+
+        <h4>Visual Summary: Responsibility Distribution</h4>
+        <table class="summary-table">
+            <thead>
+                <tr>
+                    <th>Model</th>
+                    <th>Client Manages</th>
+                    <th>Provider Manages</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>IaaS</td>
+                    <td>Apps, OS, middleware, runtime, data, users</td>
+                    <td>Virtualization, hardware</td>
+                </tr>
+                <tr>
+                    <td>PaaS</td>
+                    <td>Apps, data, users</td>
+                    <td>Virtualization, hardware, OS, middleware, runtime</td>
+                </tr>
+                <tr>
+                    <td>SaaS</td>
+                    <td>Users, data</td>
+                    <td>Virtualization, hardware, OS, middleware, runtime, apps</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <h4>Key Takeaways</h4>
+        <ul>
+            <li><strong>IaaS:</strong> Maximum control, higher responsibility</li>
+            <li><strong>PaaS:</strong> Balanced control, focuses on development</li>
+            <li><strong>SaaS:</strong> Minimal responsibility, just use the software</li>
+        </ul>
+
     </main>
     
     <arrow-Nav>
