--- a/main/html/content-areas/CA7 - Digital Environments/subtopic/7.6-Resillient-Digital-Environments/7.6-Resillient-Digital-Environments.html
+++ b/main/html/content-areas/CA7 - Digital Environments/subtopic/7.6-Resillient-Digital-Environments/7.6-Resillient-Digital-Environments.html
@@ -28,7 +28,211 @@
     </form>
  
     <main>
-        
+        <h3 class="heading" id="7.6">7.6 - Resilient Digital Environments</h3>
+
+        <p>A <strong>resilient digital environment</strong> is a system designed to recover quickly from failures, attacks, or unexpected events while maintaining smooth operation. Resilience is critical for organizations that rely on technology to serve clients, store data, and maintain operations.</p>
+
+        <h3 class="top-sub-heading" id="7.6.1">7.6.1 - Benefits of Resilient Environments</h3>
+
+        <p>Resilient environments provide multiple advantages for both organizations and their clients.</p>
+
+        <h4>1. Increased Security</h4>
+        <p><strong>Definition:</strong> Resilient systems protect data and reduce vulnerabilities.</p>
+
+        <h4>Key aspects:</h4>
+        <ul>
+            <li><strong>Data security (storage and transfer):</strong> Ensures that data is protected both at rest (storage) and in transit (when being transferred). Prevents data breaches or loss.<br>
+            <strong>Example:</strong> Using encrypted cloud storage or secure transmission protocols (HTTPS, VPNs).</li>
+            <li><strong>Reduced vulnerabilities:</strong> Systems are designed to withstand attacks and recover quickly from failures. Regular updates and monitoring help minimize security gaps.<br>
+            <strong>Example:</strong> Automatic security patches and firewalls prevent malware or ransomware attacks.</li>
+        </ul>
+
+        <h4>2. Increased Reputation</h4>
+        <p><strong>Definition:</strong> Resilient systems help protect a company's brand and maintain trust with customers.</p>
+
+        <h4>Key aspects:</h4>
+        <ul>
+            <li><strong>Protect brand/image:</strong> Fewer system failures or data breaches means the company appears professional and reliable.<br>
+            <strong>Example:</strong> An online bank with resilient systems avoids downtime, reinforcing trust.</li>
+            <li><strong>Retain customer confidence:</strong> Clients are more likely to continue using services when they know data is safe and services are reliable.<br>
+            <strong>Example:</strong> E-commerce platforms with fast, reliable service keep customers returning.</li>
+        </ul>
+
+        <h4>3. Reduction in Downtime</h4>
+        <p><strong>Definition:</strong> Resilient systems minimize service interruptions, ensuring that applications and services remain available.</p>
+        <p><strong>Why it matters:</strong> Downtime can cost businesses money and reputation. Resilient environments implement redundancy, backups, and failover systems to maintain service.</p>
+        <p><strong>Example:</strong> A streaming platform uses multiple servers across regions. If one server fails, users are automatically switched to another server without noticing any interruption.</p>
+
+        <h4>Quick Summary Table</h4>
+        <table class="summary-table">
+            <thead>
+                <tr>
+                    <th>Benefit</th>
+                    <th>Explanation</th>
+                    <th>Example</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Increased security</td>
+                    <td>Protects data in storage and transfer; reduces vulnerabilities</td>
+                    <td>Encrypted cloud storage; automatic security patches</td>
+                </tr>
+                <tr>
+                    <td>Increased reputation</td>
+                    <td>Protects brand image and retains customer trust</td>
+                    <td>Online bank avoids downtime and security breaches</td>
+                </tr>
+                <tr>
+                    <td>Reduction in downtime</td>
+                    <td>Ensures services remain available even during failures</td>
+                    <td>Streaming platform switches users to working servers automatically</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <h4>Key Takeaway</h4>
+        <p>Resilient digital environments help organizations <strong>protect data</strong>, <strong>maintain trust</strong>, and <strong>ensure continuity of service</strong>, which is critical for both organizational success and client satisfaction.</p>
+
+        <h3 class="sub-heading" id="7.6.2">7.6.2 - Methods to Improve Resilience</h3>
+
+        <p>Resilience is about preventing failures where possible and recovering quickly when they happen. Here’s how organizations do it:</p>
+
+        <h4>1. Software Updates/Upgrades</h4>
+        <ul>
+            <li><strong>Planned updates/upgrades:</strong> Regularly scheduled updates ensure software is running efficiently and securely.<br>
+            <strong>Example:</strong> Updating an operating system monthly to include performance improvements.</li>
+            <li><strong>Patches in response to new vulnerabilities:</strong> Quick fixes to address security issues discovered after software release.<br>
+            <strong>Example:</strong> Applying a security patch after a vulnerability is found in a web browser.</li>
+        </ul>
+        <p><strong>Benefit:</strong> Keeps systems <strong>secure</strong> and reduces the risk of attacks or failures.</p>
+
+        <h4>2. Hardware Replacement</h4>
+        <ul>
+            <li><strong>Rolling replacement plans:</strong> Gradually replacing old hardware before it fails.<br>
+            <strong>Example:</strong> Replacing servers that are five years old with new, faster models.</li>
+            <li><strong>Secure disposal:</strong> Properly destroying or wiping old hardware to prevent data leaks.<br>
+            <strong>Example:</strong> Shredding hard drives or using secure erasing software.</li>
+        </ul>
+        <p><strong>Benefit:</strong> Prevents hardware failures and protects sensitive data.</p>
+
+        <h4>3. Data and System Redundancy</h4>
+        <p><strong>Definition:</strong> Keeping multiple copies of data or systems to ensure availability.<br>
+        <strong>Example:</strong> Using two servers to host the same application so that if one fails, the other takes over.<br>
+        <strong>Benefit:</strong> Reduces downtime and protects against data loss.</p>
+
+        <h4>4. Device Hardening</h4>
+        <p><strong>Definition:</strong> Securing devices by removing unnecessary features.</p>
+        <ul>
+            <li>Remove unneeded ports</li>
+            <li>Uninstall unnecessary applications</li>
+            <li>Limit permissions and access</li>
+        </ul>
+        <p><strong>Example:</strong> Disabling USB ports on public-facing kiosks to prevent malware infections.<br>
+        <strong>Benefit:</strong> Reduces vulnerabilities and prevents unauthorized access.</p>
+
+        <h4>5. Backup Systems and Recovery Procedures</h4>
+        <ul>
+            <li><strong>Types of backups:</strong>
+                <ul>
+                    <li>Onsite: Backups stored within the organization’s premises. Fast recovery.</li>
+                    <li>Remote/Offsite: Backups stored in a separate physical location. Safe from local disasters.</li>
+                    <li>Cloud: Backups stored online. Accessible from anywhere and scalable.</li>
+                </ul>
+            </li>
+            <li><strong>Recovery procedures:</strong> Steps for restoring data after a failure.</li>
+        </ul>
+        <p><strong>Benefit:</strong> Ensures data can be recovered quickly after a system failure or disaster.</p>
+
+        <h4>6. Hot, Cold, and Warm Sites</h4>
+        <p><strong>Definition:</strong> Alternate locations where operations can continue after a disaster.</p>
+        <table class="summary-table">
+            <thead>
+                <tr>
+                    <th>Site Type</th>
+                    <th>Description</th>
+                    <th>Speed of Recovery</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Hot site</td>
+                    <td>Fully equipped with hardware and software</td>
+                    <td>Immediate/fast</td>
+                </tr>
+                <tr>
+                    <td>Warm site</td>
+                    <td>Partially equipped; may need setup</td>
+                    <td>Moderate</td>
+                </tr>
+                <tr>
+                    <td>Cold site</td>
+                    <td>Empty space with basic infrastructure</td>
+                    <td>Slow, requires full setup</td>
+                </tr>
+            </tbody>
+        </table>
+        <p><strong>Benefit:</strong> Minimizes downtime during major disruptions.</p>
+
+        <h4>7. Standard Operating Procedures (SOPs)</h4>
+        <p><strong>Definition:</strong> Guidelines and processes for staff to follow.</p>
+        <ul>
+            <li>Effective staff training - Ensures employees know how to respond to incidents.</li>
+            <li>Induction - New staff learn procedures and resilience measures.</li>
+            <li>New digital systems - Training on new software or systems.</li>
+            <li>New or updated policies - Ensures staff follow the latest security and operational rules.</li>
+        </ul>
+        <p><strong>Benefit:</strong> Human errors are reduced, and everyone knows how to maintain and recover systems.</p>
+
+        <h4>Quick Summary Table</h4>
+        <table class="summary-table">
+            <thead>
+                <tr>
+                    <th>Method</th>
+                    <th>Purpose / Benefit</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Software updates/upgrades</td>
+                    <td>Fix vulnerabilities; improve performance</td>
+                </tr>
+                <tr>
+                    <td>Hardware replacement</td>
+                    <td>Prevent failures; secure disposal</td>
+                </tr>
+                <tr>
+                    <td>Data/system redundancy</td>
+                    <td>Reduce downtime; protect data</td>
+                </tr>
+                <tr>
+                    <td>Device hardening</td>
+                    <td>Reduce vulnerabilities; limit unauthorized access</td>
+                </tr>
+                <tr>
+                    <td>Backup systems & recovery</td>
+                    <td>Ensure data can be restored quickly</td>
+                </tr>
+                <tr>
+                    <td>Hot, cold, warm sites</td>
+                    <td>Maintain operations after disasters</td>
+                </tr>
+                <tr>
+                    <td>Standard operating procedures</td>
+                    <td>Staff follow correct processes; reduce human errors</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <h4>Key Takeaway</h4>
+        <p>Resilient digital environments rely on <strong>technology</strong>, <strong>processes</strong>, and <strong>people</strong> working together:</p>
+        <ul>
+            <li><strong>Technology:</strong> backups, redundancy, updates, hardware</li>
+            <li><strong>Processes:</strong> SOPs, recovery plans, hot/cold sites</li>
+            <li><strong>People:</strong> trained staff who know procedures</li>
+        </ul>
+        <p>By combining these methods, organizations can <strong>minimize downtime</strong>, <strong>prevent data loss</strong>, and <strong>maintain client trust</strong>.</p>
+
     </main>
     
     <arrow-Nav>
