fixed main menu formats

--- a/main/html/content-Areas.html
+++ b/main/html/content-Areas.html
@@ -17,7 +17,7 @@
   </header>
 
   <main>
-
+    <content>
     <h2 id="CAS">Choose Your Content Area</h2>
     <div class="content-area">
       <a href="content-areas/CA1 - Problem Solving/problem-solving.html" class="main-topic">
@@ -64,7 +64,7 @@
           <img src="../images/next-arrow.png" alt="next arrow" width="100" height="100" id="arrow"/>
       </a>
     </arrow-Nav> 
-
+  </content>
   </main>
 
 </body>
