--- a/main/html/index.html
+++ b/main/html/index.html
@@ -18,8 +18,8 @@
   </header>
 
   <main>
-
-    <h2 id="CAS">Choose Your Area.</h2>
+    <content>
+    <h2 class="title" id="CAS">Choose Your Area.</h2>   
     <div class="content-area">
       <a href="./content-Areas.html" class="main-topic">
         <img src="../images/content-areas.png" alt="CA" width="200" height="200"/>
@@ -34,7 +34,7 @@
         <h3>Other</h3>
       </a>
     </div>
-
+    </content>
   </main>
   <script>
     document.querySelector('form').addEventListener('submit', function(e) {
