--- a/main/html/Esp.html
+++ b/main/html/Esp.html
@@ -17,7 +17,7 @@
   </header>
 
   <main>
-
+    <content>
     <h2 id="ESP">Employer Set Project (ESP)</h2>
     <div class="content-area">
        <a href="employer-set-project/pre-task/pre-task.html" class="esp-topic">
@@ -59,7 +59,7 @@
           <img src="../images/next-arrow.png" alt="next arrow" width="100" height="100" id="arrow"/>
       </a>
     </arrow-Nav> 
-
+  </content>
   </main>
 
 </body>
