--- a/main/html/Other.html
+++ b/main/html/Other.html
@@ -17,7 +17,7 @@
   </header>
 
   <main>
-
+    <content>
     <h2 id="Other"> Other </h2>
     <div class="content-area">
       <a href="Other/About T-levels/About.html" class="esp-topic">
@@ -35,7 +35,7 @@
           <img src="../images/home.png" alt="home" width="100" height="100" id="arrow"/>
       </a>
     </arrow-Nav> 
-
+    </content>
   </main>
 
 </body>
